--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,7 +1,5 @@
 ---
 - name: Converge
   hosts: all
-  tasks:
-    - name: "Include ansible-role-ansiboard"
-      include_role:
-        name: "ansible-role-ansiboard"
+  roles:
+    - role: sgaduuw.ansiboard
