--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,11 +3,20 @@ dependency:
   name: galaxy
 driver:
   name: docker
+lint: |
+  set -e
+  yamllint .
+  ansible-lint
 platforms:
   - name: instance
-    image: docker.io/pycontribs/centos:8
+    image: "geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
     pre_build_image: true
 provisioner:
   name: ansible
-verifier:
-  name: ansible
+  playbooks:
+    prepare: prepare.yml
+    converge: converge.yml
