Role info should contain platforms

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,7 +11,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  platforms: []
+  platforms:
+    - name: Archlinux
+      versions:
+        - all
 
   galaxy_tags: []
 
