Add galaxy tags

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -16,6 +16,10 @@ galaxy_info:
       versions:
         - all
 
-  galaxy_tags: []
+  galaxy_tags:
+    - system
+    - ansible
+    - facts
+    - dashboard
 
 dependencies: []
