Add tasks to build poc

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,28 @@
 ---
 # tasks file for ansible-role-ansiboard
+- name: directory structure
+  file:
+    path:
+      - "{{ ansiboard_basedir }}"
+      - "{{ ansiboard_basedir }}/groups"
+      - "{{ ansiboard_basedir }}/hosts"
+    state: directory
+    mode: 0755
+
+- name: front page
+  template:
+    src: frontpage.html.j2
+    dest: "{{ ansiboard_basedir }}/index.html"
+
+- name: with_dict
+  debug:
+    msg: "{{ item.key }}"
+  loop: "{{ groups|dict2items }}"
+
+- name: test
+  template:
+    src: groupmembers.html.j2
+    dest: "{{ ansiboard_basedir }}/groups/{{ item.key }}.html"
+    owner: root
+    group: root
+  with_dict: "{{ groups }}"
