--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,12 +2,13 @@
 # tasks file for ansible-role-ansiboard
 - name: directory structure
   file:
-    path:
-      - "{{ ansiboard_basedir }}"
-      - "{{ ansiboard_basedir }}/groups"
-      - "{{ ansiboard_basedir }}/hosts"
+    path: "{{ item }}"
     state: directory
     mode: 0755
+  with_items:
+    - "{{ ansiboard_basedir }}"
+    - "{{ ansiboard_basedir }}/groups"
+    - "{{ ansiboard_basedir }}/hosts"
 
 - name: front page
   template:
