Add more platforms to test on

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,20 @@ services: docker
 env:
   matrix:
     - MOLECULE_DISTRO: centos8
+    - MOLECULE_DISTRO: centos7
+    - MOLECULE_DISTRO: centos6
     - MOLECULE_DISTRO: debian10
+    - MOLECULE_DISTRO: debian9
+    - MOLECULE_DISTRO: debian8
     - MOLECULE_DISTRO: ubuntu2004
     - MOLECULE_DISTRO: ubuntu1804
     - MOLECULE_DISTRO: ubuntu1604
+    - MOLECULE_DISTRO: fedora32
+    - MOLECULE_DISTRO: fedora31
+    - MOLECULE_DISTRO: fedora29
+    - MOLECULE_DISTRO: fedora28
+    - MOLECULE_DISTRO: fedora27
+    - MOLECULE_DISTRO: amazonlinux2
 
 install:
   # Install test dependencies.
